k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    istio-injection: enabled
    app.kubernetes.io/name: ecommerce
